update frontend stuff

--- a/views/media.pug
+++ b/views/media.pug
@@ -204,15 +204,15 @@ block content
                     img(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter')
                 a(href=`https://twitter.com/share?url=${url}` target="_blank")
                     img(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter')
-                a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on PewTube: ${url}`, title='Share by Email')
+                a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on NodeTube: ${url}`, title='Share by Email')
                     img(src='/images/email-share.jpg')
 
             br
-            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} \n\nhttps://pew.tube/user/${upload.uploader.channelUrl}/${upload.uniqueTag}`)
+            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} \n\nhttps://nodetube.liv/user/${upload.uploader.channelUrl}/${upload.uniqueTag}`)
                 i.fa.fa-info
                 | Copy Details
 
-            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName} \n\n https://pew.tube/user/${upload.uploader.channelUrl}/${upload.uniqueTag} \n\n #PewTube`)
+            button.btn.btn-default.copy-button(style="padding:4px 12px" data-clipboard-text=`${upload.title} by ${upload.uploader.channelName} \n\n https://nodetube.live/user/${upload.uploader.channelUrl}/${upload.uniqueTag} \n\n #PewTube`)
                 i.fa.fa-info
                 | With User Info
 
