--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  div(style="text-align:center")
+  div.container(style="text-align:center")
     br
     br
     br
