--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -1,4 +1,4 @@
-div.card(style="width: 368px; margin-left: auto")         
+div.card()         
     include ../viewPartials/uploadThumbnail         
         div.card-body
             div.card-title
@@ -18,7 +18,7 @@ div.card(style="width: 368px; margin-left: auto")
                 if upload.category
                     p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") #{upload.category} 
                 if upload.subcategory
-                    p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") | #{upload.subcategory}
+                    p.upload-title-text.views-text(style="margin:0;margin-left:3px;text-align:center;display:inline;") | #{upload.subcategory} 
                 if upload.rating
                     if upload.rating == 'allAges'
                         p.upload-title-text.views-text(style="display:inline") | SFW
@@ -39,7 +39,7 @@ style.
 
 if user && user.role == 'admin'
     div.admin-div(style="margin-bottom:15px;margin-top:-4px;")
-        div.thing(style="margin-top:-33px;margin-left:44px;display:block")
+        div.thing(style="margin-top:-33px;margin-left:54px;display:block")
              input.ratingChanged(style="display:block" type="checkbox" value=`${upload._id}`)
 
 // denote whether upload is deleted
