--- a/public/css/lib/bootstrap/bootstrap.scss
+++ b/public/css/lib/bootstrap/bootstrap.scss
@@ -44,6 +44,7 @@
 @import "responsive-embed";
 @import "wells";
 @import "close";
+@import "card";
 
 // Components w/ JavaScript
 @import "modals";
