--- a/public/css/themes/default/_default.scss
+++ b/public/css/themes/default/_default.scss
@@ -5,7 +5,8 @@
 
 .btn {
   border-radius: 0;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.11), 1px 1px 0 rgba(255, 255, 255, 0.21) inset;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.11),
+    1px 1px 0 rgba(255, 255, 255, 0.21) inset;
 
   &:focus {
     outline: none;
@@ -16,7 +17,8 @@
   box-shadow: none;
 }
 
-.btn-default, .btn-default:focus {
+.btn-default,
+.btn-default:focus {
   background-image: linear-gradient(to bottom, #ffffff 60%, #f8f8f8 100%);
 }
 
@@ -32,7 +34,7 @@
 
 .alert {
   border-radius: 0;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 // Navbar
